Fix postcode search box on mobile
The 10em size settings were ignored, becuase we didn't set the class.

--- a/templates/style.css
+++ b/templates/style.css
@@ -146,7 +146,7 @@ form.postcode-search input {
 
 form.postcode-search input.postcode {
   max-width: 10em;
-  width: 100%;
+  width: 90%;
 }
 
 div.othersite {
